[package]
name = "arq"
version = "0.1.3"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Arq library to manage Arq Backup data formats"
documentation = "https://docs.rs/arq"
repository = "https://github.com/nlopes/arq.git"
keywords = ["arq", "backup"]
categories = ["data-structures", "encoding"]
license = "MIT"
exclude = [".gitignore", ".travis.yml"]

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+aes", "-C", "target-cpu=native"]
rustdoc-args = ["-C", "target-feature=+aes", "-C", "target-cpu=native"]

[badges]
travis-ci = { repository = "nlopes/arq", branch = "master" }

[dependencies]
aesni = "0.6"
block-modes = "0.3"
block-padding = "0.1"
byteorder = "1.3"
chrono = "0.4"
crypto-mac = "0.7"
digest = "0.8"
hex-literal = "0.2"
hmac = "0.7"
lz4-sys = "1.8"
pbkdf2 = "0.3"
plist = "0.4"
ring = "0.14"
serde = "1.0"
serde_derive = "1.0"
sha-1 = "0.8"
sha2 = "0.8"
