[package]
name = "arq"
version = "0.1.4"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2018"
description = "Arq library to manage Arq Backup data formats"
documentation = "https://docs.rs/arq"
repository = "https://github.com/nlopes/arq.git"
keywords = ["arq", "backup"]
categories = ["data-structures", "encoding"]
license = "MIT"
exclude = [".gitignore", ".travis.yml"]

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+aes", "-C", "target-cpu=native"]
rustdoc-args = ["-C", "target-feature=+aes", "-C", "target-cpu=native"]

[badges]
travis-ci = { repository = "nlopes/arq", branch = "master" }

[dependencies]
aesni = "0.10"
block-modes = "0.7"
block-padding = "0.2"
byteorder = "1.3"
chrono = "0.4"
digest = "0.9"
hex-literal = "0.3"
hmac = "0.10"
lz4-sys = "1.9"
pbkdf2 = "0.6"
plist = "1.0"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
sha-1 = "0.9"
sha2 = "0.9"
