[package]
name = "arq"
version = "0.1.4"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
description = "Arq library to manage Arq Backup data formats"
documentation = "https://docs.rs/arq"
repository = "https://github.com/nlopes/arq.git"
keywords = ["arq", "backup"]
categories = ["data-structures", "encoding"]
license = "MIT"
exclude = [".gitignore", ".github/"]

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+aes", "-C", "target-cpu=native"]
rustdoc-args = ["-C", "target-feature=+aes", "-C", "target-cpu=native"]

[badges]
github = { workflow = "CI", repository = "nlopes/arq" }

[dependencies]
aes = "0.8"
byteorder = "1.4"
cbc = "0.1"
chrono = "0.4"
digest = "0.10"
hex-literal = "0.4"
hmac = "0.12"
lz4_flex = "0.11"
plist = "1.3"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
sha-1 = "0.10"
sha2 = "0.10"
